# Thansohoc

./: README.md  edge_cases_test.py  final_comprehensive_test.py  index.html  test_api_comprehensive.py
.github/workflows/: gh-pages.yml  pages.yml
docs/: 404.html
docs/assets/: app.js  styles.css
numerus-starter-v16/numerus-starter/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
numerus-starter-v16/numerus-starter/.devcontainer/: Dockerfile  devcontainer.json
numerus-starter-v16/numerus-starter/.github/workflows/: ci.yml
numerus-starter-v16/numerus-starter/numerus/: api.py  api.py.backup  api_backup.py  api_clean.py  api_complete.py  context_rules.json  en_reporter.py  engine.py  reporter.py  rules.py
numerus-starter-v16/numerus-starter/numerus/content/: expert-pack-vi-pro.json
numerus-starter-v16/numerus-starter/numerus/content/cycles/: personal_years_vi.json  pinnacles_vi.json
numerus-starter-v16/numerus-starter/numerus/systems/: arabic_abjad.json  chaldean.json  greek_isopsephy.json  hebrew_gematria.json  pythagorean.json  vietnamese_latin.json
numerus-starter-v16/numerus-starter/numerus/templates/: report.html
numerus-starter-v16/numerus-starter/ops/: CHAOS.md  grafana-dashboard.json  hpa.yaml  k6-loadtest.js
numerus-starter-v16/numerus-starter/static/: index.html  script.js  styles.css
numerus-starter-v16/numerus-starter/tests/: test_context.py  test_engine.py  test_pyramid.py  test_systems.py
