
[tool.poetry]
name = "numerus"
version = "0.1.0"
description = "Plugin-style numerology engine + FastAPI service."
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{include = "numerus"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
